src/test/ui/dropck/dropck-eyepatch-reorder.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/dropck-eyepatch-reorder.rs:48:20
   |
LL |     dt = Dt("dt", &c);
   |                    ^ borrowed value does not live long enough
...
LL | }
   | - `c` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c` does not live long enough
  --> $DIR/dropck-eyepatch-reorder.rs:50:20
   |
LL |     dr = Dr("dr", &c);
   |                    ^ borrowed value does not live long enough
...
LL | }
   | - `c` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c_shortest` does not live long enough
  --> $DIR/dropck-eyepatch-reorder.rs:54:20
   |
LL |     dt = Dt("dt", &c_shortest);
   |                    ^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | - `c_shortest` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c_shortest` does not live long enough
  --> $DIR/dropck-eyepatch-reorder.rs:56:20
   |
LL |     dr = Dr("dr", &c_shortest);
   |                    ^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | - `c_shortest` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c_shortest` does not live long enough
  --> $DIR/dropck-eyepatch-reorder.rs:64:29
   |
LL |     pt = Pt("pt", &c_long, &c_shortest);
   |                             ^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | - `c_shortest` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c_shortest` does not live long enough
  --> $DIR/dropck-eyepatch-reorder.rs:66:29
   |
LL |     pr = Pr("pr", &c_long, &c_shortest);
   |                             ^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | - `c_shortest` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0597`.
